# metrics_cloudwatch

./: .clog.toml  CHANGELOG.md  Cargo.toml  README.md  build.rs  clippy.sh  release.sh
.github/workflows/: quickstart.yml
benches/: bench.rs
proptest-regressions/: collector.txt
src/: builder.rs  collector.rs  error.rs  lib.rs  mock.rs
tests/: flush_on_shutdown.rs  flush_signal.rs  gzip.rs  test.rs
tests/common/: mock.rs  mod.rs
