[package]
name = "metrics_cloudwatch"
version = "2.0.1"
authors = ["ramn <github@rymdimperiet.org>"]
edition = "2018"

description = "CloudWatch emitter for the metrics crate"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/metrics_cloudwatch"
homepage = "https://github.com/ramn/metrics_cloudwatch"
repository = "https://github.com/ramn/metrics_cloudwatch"
readme = "README.md"
keywords = ["metrics", "cloudwatch", "aws"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
chrono = "0.4"
futures-util = { version = "0.3", default-features = false }
log = "0.4"
metrics = { version = "0.16", features = ["std"] }
ordered-float = "2"
rand = { version = "0.8", default-features = false, features = [
    "small_rng",
    "std",
    "std_rng",
] }
aws-sdk-cloudwatch = "0.30"
aws-config = "0.56.1"
aws-smithy-types-convert = { version = "0.56.1", features = ["convert-chrono"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
proptest = "1"
async-trait = "0.1.24"
criterion = { version = "0.3", features = ["async_tokio"] }
tokio = { version = "1", features = ["test-util", "macros"] }


[[bench]]
name = "bench"
harness = false
