[package]
name = "metrics_cloudwatch"
version = "4.0.0"
authors = ["ramn <github@rymdimperiet.org>"]
edition = "2018"

description = "CloudWatch emitter for the metrics crate"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/metrics_cloudwatch"
homepage = "https://github.com/ramn/metrics_cloudwatch"
repository = "https://github.com/ramn/metrics_cloudwatch"
readme = "README.md"
keywords = ["metrics", "cloudwatch", "aws"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
aws-sdk-cloudwatch = "1"
aws-smithy-types-convert = { version = "0.60", features = ["convert-chrono"] }
chrono = "0.4"
futures-util = "0.3"
log = "0.4"
metrics = "0.24"
metrics-util = { version = "0.19", features = ["registry"] }
ordered-float = "4"
rand = { version = "0.8", default-features = false, features = [ "small_rng", "std", "std_rng", ] }
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
aws-config = "1"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }


[[bench]]
name = "bench"
harness = false
