[package]
name = "metrics_cloudwatch"
version = "4.0.0"
authors = ["ramn <github@rymdimperiet.org>"]
edition = "2024"

description = "CloudWatch emitter for the metrics crate"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/metrics_cloudwatch"
homepage = "https://github.com/ramn/metrics_cloudwatch"
repository = "https://github.com/ramn/metrics_cloudwatch"
readme = "README.md"
keywords = ["metrics", "cloudwatch", "aws"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
aws-sdk-cloudwatch = "1"
aws-smithy-types-convert = { version = "0.60", features = ["convert-chrono"] }
chrono = "0.4"
futures-util = "0.3"
log = "0.4"
metrics = "0.24"
metrics-util = { version = "0.20", features = ["registry"] }
ordered-float = "5"
rand = { version = "0.9", default-features = false, features = [ "small_rng", "std", "std_rng", ] }
tokio = { version = "1", features = ["sync", "time"] }
flate2 = { version = "1", optional = true }


[dev-dependencies]
anyhow = "1"
aws-config = "1"
aws-smithy-types = "1"
aws-smithy-runtime-api = "1"
criterion = { version = "0.7", features = ["async_tokio"] }
env_logger = "0.11"
http-body = "0.4"
proptest = "1"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }

[features]
gzip = ["flate2"]
integration-test = ["gzip"]

[[bench]]
name = "bench"
harness = false
